Fix sky overflow in nav, add new sky asset with better colors

--- a/_assets/scss/components/_hero.scss
+++ b/_assets/scss/components/_hero.scss
@@ -5,7 +5,7 @@ $icebergMaxWidth: 700px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(../media/clouds.svg);
+  background-image: url(../media/skywithclouds.svg);
   background-size: cover;
   position: relative;
   margin-bottom: 70%;
