--- a/_assets/scss/components/_nav.scss
+++ b/_assets/scss/components/_nav.scss
@@ -79,10 +79,10 @@
     &:before{
       content: "";
       @include fill;
-      width: 250%;
-      height: 250%;
-      margin-left: -75%;
-      margin-top: -75%;
+      width: 200vmax;
+      height: 200vmax;
+      margin-left: -50vmax;
+      margin-top: -50vmax;
       transform-origin: center;
       transform: rotate(20deg);
       pointer-events: none;
@@ -90,7 +90,7 @@
       animation: kenBurns 16s linear infinite alternate;
       animation-fill-mode: both;
 
-      background-image: url(../media/clouds.svg);
+      background-image: url(../media/skywithclouds.svg);
       background-size: cover;
     }
   }
